Add runtime support for constraint validation